@@ -90,4 +90,7 @@ def configure_repository():
     configs["ProceduralHeaderTest1"] = TestSetup(win={"Native": [visualc64, visualc32, mingw32], "VSSolution": [visualc64, visualc32]},
                                                  linux={"Native": [gcc64, gcc32]},
                                                  osx={"Native": [clang64, clang32]})
+    configs["EmbedStaticIntoDynamicLibrary"] = TestSetup(win={"Native": [visualc64, visualc32, mingw32], "VSSolution": [visualc64, visualc32]},
+                                                         linux={"Native": [gcc64, gcc32]},
+                                                         osx={"Native": [clang64, clang32]})
     return configs
